@@ -1,8 +1,9 @@
 PROGNAME = ..\..\..\bin\win32\zabbix_agentd.exe
+PDBNAME = ..\..\..\bin\win32\zabbix_agentd.pdb
 INCS = /I .\ /I ..\include /I ..\..\..\include /I ..\..\..\src\zabbix_agent
-COMMON_FLAGS = $(INCS) /O2 /Ob1 /GF /FD /EHsc /MT /Gy /W3 /c /D _WINDOWS /D _WIN32_WINNT=0x0500 /D _CONSOLE /D UNICODE /D _UNICODE /D NDEBUG /D WIN32 /D HAVE_WINLDAP_H /D HAVE_ASSERT_H /D ZABBIX_SERVICE /D WITH_AGENT_METRICS /D WITH_COMMON_METRICS /D WITH_SPECIFIC_METRICS /D WITH_HOSTNAME_METRIC /D WITH_SIMPLE_METRICS /D "_VC80_UPGRADE=0x0600" /D HAVE_IPV6
-CFLAGS = $(COMMON_FLAGS) /TC
+COMMON_FLAGS = $(INCS) /O2 /Ob1 /GF /FD /EHsc /MT /Gy /W3 /c /Zi /Fdzabbix_agentd.pdb /D _WINDOWS /D _WIN32_WINNT=0x0500 /D _CONSOLE /D UNICODE /D _UNICODE /D NDEBUG /D WIN32 /D HAVE_WINLDAP_H /D HAVE_ASSERT_H /D ZABBIX_SERVICE /D WITH_AGENT_METRICS /D WITH_COMMON_METRICS /D WITH_SPECIFIC_METRICS /D WITH_HOSTNAME_METRIC /D WITH_SIMPLE_METRICS /D "_VC80_UPGRADE=0x0600" /D HAVE_IPV6
+CFLAGS = $(COMMON_FLAGS) /TC 
 CPPFLAGS = $(COMMON_FLAGS) /TP
-LFLAGS = /INCREMENTAL:NO /MANIFEST /MANIFESTFILE:"zabbix_agentd.exe.manifest" /MANIFESTUAC:"level='asInvoker' uiAccess='false'" /PDB:"zabbix_agentd.pdb" /SUBSYSTEM:CONSOLE /DYNAMICBASE:NO /MACHINE:X86 /DELAYLOAD:wevtapi.dll
+LFLAGS = /INCREMENTAL:NO /DEBUG /OPT:REF /MANIFEST /MANIFESTFILE:"zabbix_agentd.exe.manifest" /MANIFESTUAC:"level='asInvoker' uiAccess='false'" /SUBSYSTEM:CONSOLE /DYNAMICBASE:NO /MACHINE:X86 /DELAYLOAD:wevtapi.dll
 
 include Makefile_agent.inc
